# iamkit

./: .gitignore  README.md  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: leak-allowed-authors.txt
.github/workflows/: ci.yml  leak-guard.yml
docs/: ARCHITECTURE.md
examples/acme/: acme_iam.yaml  config.py  export.py
principles/: index.md  p01-group-held-access.md  p02-lifecycle-as-code.md  p03-tiered-administration.md  p04-conditional-access-baseline.md  p05-guests-sponsored-expiring.md  p06-nonhuman-first-class.md  p07-names-readable-conventions-code.md  p08-one-reference-namespace.md
scripts/: build_hooks.py  leak-guard.sh
src/iamkit/: __init__.py
src/iamkit/clients/: linear.py
src/iamkit/convention/: __init__.py  loader.py  naming.py  rules.py  schema.py
src/iamkit/executors/: __init__.py  base.py  linear.py
src/iamkit/export/: __init__.py  graph_api.py  terraform.py
src/iamkit/models/: __init__.py  access.py  base.py  conditional_access.py  config.py  enums.py  groups.py  license.py  principals.py
terraform/modules/entra/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/github/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_acme_example.py  test_convention.py  test_environment.py  test_executor_base.py  test_executors_import.py  test_export.py  test_export_generic.py  test_leak_guard.py  test_linear_client.py  test_linear_executor.py  test_models.py  test_package.py  test_principles_catalog.py
