[project]
name = "iamkit"
version = "0.1.1"
description = "IAM-as-code toolkit: Pydantic DSL for identities, groups and access policies, exported to Terraform (Entra ID, GitHub) and API executors (Linear)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iamkit"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/build_hooks.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
